# dbquery

./: .gitignore  FEATURE_EXPORT.md  README.md  constitution_guide.md  specify_guide.md
.specify/memory/: constitution.md
backend/: README.md  package-lock.json  package.json  pyproject.toml
backend/db_query/: db_query.db
backend/src/adapters/: base.py  mariadb_adapter.py  postgres_adapter.py
backend/src/api/: app.py  connections.py  errors.py  exports.py  generate_sql.py  history.py  metadata.py  query.py  router.py
backend/src/models/: base.py  connections.py  errors.py  exports.py  generate_sql.py  history.py  metadata.py  query.py
backend/src/repositories/: history_repo.py  metadata_repo.py  sqlite.py
backend/src/services/: adapter_registry.py  connection_service.py  export_service.py  history_service.py  metadata_normalizer.py  metadata_service.py  modelscope_client.py  ollama_client.py  prompt_builder.py  query_service.py  sql_generation_service.py  sql_validator.py
backend/src/utils/: app_errors.py  logging.py  request_id.py  settings.py
backend/tests/: conftest.py
backend/tests/contract/: test_connections.py  test_export.py  test_generate_sql.py  test_metadata.py  test_query.py
backend/tests/integration/: test_metadata_refresh.py  test_query_execution.py
backend/tests/unit/: test_metadata_normalizer.py  test_prompt_builder.py  test_sql_validator.py
db_query/: db_query.db
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
(+34 files in other folders)
